--- a/react/cinema/src/pages/Admin/Admin.css
+++ b/react/cinema/src/pages/Admin/Admin.css
@@ -1,9 +1,8 @@
 .admin {
   display: flex;
   justify-content: center;
-
   gap: 10px;
-  margin-top: 30px;
+  flex-wrap: wrap;
 }
 .create {
   display: flex;
@@ -13,6 +12,7 @@
   color: white;
   gap: 10px;
   margin-top: 30px;
+  border: 1px solid white;
 }
 .delete {
   display: flex;
@@ -22,10 +22,13 @@
   color: white;
   gap: 10px;
   margin-top: 30px;
+  border: 1px solid white;
 }
-.deletebutton {
-  margin-top: 148px;
+
+.delete input {
+  margin-bottom: auto;
 }
+
 .repertoires {
   display: flex;
   flex-direction: column;
@@ -34,6 +37,7 @@
   color: white;
   gap: 10px;
   margin-top: 30px;
+  border: 1px solid white;
 }
 .movies {
   display: flex;
@@ -43,4 +47,5 @@
   color: white;
   gap: 10px;
   margin-top: 30px;
+  border: 1px solid white;
 }
