--- a/react/cinema/src/pages/Home/Home.css
+++ b/react/cinema/src/pages/Home/Home.css
@@ -4,7 +4,7 @@
   justify-content: center;
   padding-top: 100px;
   font-size: 32px;
-  color: red;
+  color: white;
   align-items: center;
 }
 
@@ -19,6 +19,7 @@
 .container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   flex-direction: row; /* Keep this to stack the content vertically */
   gap: 30px;
   align-items: center;
@@ -32,14 +33,21 @@
   flex-direction: column; /* Keep this to stack the content vertically */
   text-decoration: none;
   padding: 40px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
+  border: 1px solid white;
 }
 
 .box:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.6);
   transform: scale(1.1);
 }
+
+.box img {
+  max-width: 100%;
+  height: auto;
+}
+
 .loginwrapper {
   display: flex;
   justify-content: flex-end;
@@ -47,4 +55,13 @@
   margin-right: 20px;
   margin-bottom: 10px;
   gap: 10px;
+}
+
+.loginwrapper a {
+  text-decoration: none;
+}
+
+.loginwrapper span {
+  align-self: center;
+  margin-left: 5px;
 }
