--- a/react/cinema/src/pages/Movie/Movie.css
+++ b/react/cinema/src/pages/Movie/Movie.css
@@ -1,13 +1,13 @@
 .button {
   display: flex;
   justify-content: bottom;
-
   padding: 10px;
   border: black solid 1px;
   background-color: rgba(0, 0, 0, 0.5);
   margin-top: 10px;
   text-decoration: none;
   color: white;
+  border: 1px solid white;
 }
 .button:hover {
   background-color: rgba(0, 0, 0, 0.6);
@@ -17,10 +17,11 @@
   margin-top: 50px;
   background-color: rgba(0, 0, 0, 0.6);
   padding: 20px;
+  border: 1px solid white;
 }
-.image:hover {
-  transform: scale(1.3);
-}
+
 .image {
   max-height: 500px;
+  max-width: 100%;
+  height: auto;
 }
