--- a/react/cinema/src/pages/Repertoire/Repertoire.css
+++ b/react/cinema/src/pages/Repertoire/Repertoire.css
@@ -2,28 +2,33 @@
   display: flex;
   flex-direction: column; /* Change to column to stack children vertically */
   justify-content: top;
-
+  flex-wrap: wrap;
   align-items: center;
-  margin-left: 200px;
-  margin-right: 200px;
-  height: 600px;
-  margin-bottom: 30px;
+
+
   color: white;
 }
+
+.repertoire .button {
+  margin-top: 40px;
+}
+
 .content {
   display: flex;
   flex-direction: row; /* Change to column to stack children vertically */
   justify-content: center;
-
+  flex-wrap: wrap;
   color: white;
   gap: 40px;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 .movie {
   color: white;
   font-size: 16px;
   padding: 10px;
   text-align: center;
-
+  border: 1px solid white;
   background-color: rgba(0, 0, 0, 0.5);
 }
 .moviename {
@@ -35,14 +40,13 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-
+  text-align: center;
   color: white;
   font-size: 16px;
   gap: 2px;
   align-items: center;
   height: 100px;
   font-size: 32px;
-  margin-left: 100px;
 
   margin-top: 30px;
 }
@@ -59,12 +63,12 @@
 }
 .movie:hover {
   background-color: rgba(0, 0, 0, 0.6);
-  transform: scale(1.1);
+  transform: scale(1.01);
 }
 .button:hover {
   background-color: rgba(0, 0, 0, 0.6);
   transform: scale(1.1);
 }
 .moviename:hover {
-  transform: scale(1.1);
+  transform: scale(1.01);
 }
